test_suite/tests/ui/identifier/variant_struct.stderr
error: #[serde(variant_identifier)] can only be used on an enum
 --> tests/ui/identifier/variant_struct.rs:5:1
  |
5 | struct S;
  | ^^^^^^
